@@ -23,6 +23,15 @@ android {
             buildConfigField("String", "API_URL", "\"https://carpool-api-r64g2xh4xa-uc.a.run.app\"")
         }
     }
+    sourceSets {
+        androidTest.setRoot('src/androidTest')
+    }
+    testOptions {
+        unitTests.all {
+            // All the usual Gradle options.
+            jvmArgs '-XX:MaxPermSize=256m'
+        }
+    }
 }
 
 dependencies {
@@ -34,6 +43,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'org.junit.jupiter:junit-jupiter-api:5.2.0'
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.firebase:firebase-messaging:20.1.5'
